--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 :root {
-  font-family: 'Courier New', Courier, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
